# leadgen

./: .env.example  .gitignore  .replit  README.md  build_css.js  config.py  create_tables.sql  crm_integration.py  email_generator.py  email_sender.py  forms.py  lead_manager.py  lead_scheduler.py  main.py  message_generator.py  ml_engine.py  package-lock.json  package.json  pyproject.toml  replit.nix  scraper.py  tailwind.config.js  web_app.py
attached_assets/: Pasted-2-Leads-Section-Purpose-Core-value-displays-their-AI-generated-leads-makes-the-499-5-999-worth--1740524707884.txt  Pasted-AI-Lead-Scraper-Full-Details-Overview-Purpose-Scrape-real-leads-from-multiple-sources-Yellow-Page-1740548084174.txt  Pasted-APIError-postgrest-exceptions-APIError-code-42P01-details-None-hint-None-message--1740631609139.txt  Pasted-APIError-postgrest-exceptions-APIError-code-42P01-details-None-hint-None-message--1740632208981.txt  Pasted-Alright-bro-Leadzap-s-ecosystem-is-stacked-with-the-dashboard-lead-history-analytics-settings-a-1740539025241.txt  Pasted-Alright-bro-dashboard-s-locked-in-looking-like-a-million-dollar-beast-for-Leadzap-When-users-log--1740524482182.txt  Pasted-Alright-bro-dashboard-s-locked-in-with-that-slick-new-navbar-giving-Leadzap-users-a-premium-clien-1740525483370.txt  Pasted-Alright-bro-fuck-yeah-let-s-cook-up-a-badass-dashboard-for-Leadzap-You-re-logged-in-with-Supabase-1740511730686.txt  Pasted-Alright-bro-fuck-yeah-let-s-cook-up-a-badass-dashboard-for-Leadzap-You-re-logged-in-with-Supabase-1740524686172.txt  (+55 more)
data/: user_packages.json
models/: lead.py  (+2 more)
(+71 files in other folders)
