[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "flask-login>=0.6.3",
    "jinja2>=3.1.5",
    "openai>=1.64.0",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "sendgrid>=6.11.0",
    "trafilatura>=2.0.0",
    "flask-wtf>=1.2.2",
    "wtforms>=3.2.1",
    "email-validator>=2.2.0",
    "psutil>=7.0.0",
    "flask>=3.1.0",
    "oauthlib>=3.2.2",
    "werkzeug>=3.1.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-migrate>=4.1.0",
    "psycopg2-binary>=2.9.10",
    "supabase>=2.13.0",
    "stripe>=11.6.0",
    "twilio>=9.4.6",
]

[tool.uv.sources]
supabase = { git = "https://github.com/supabase-community/supabase-py.git" }
